# webhook-relay-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: main.py  metrics.py
app/api/: routes.py
app/core/: config.py  errors.py  logging.py  security.py
app/db/: models.py  session.py
app/schemas/: __init__.py  api.py
app/scripts/: cleanup.py
app/services/: cleanup.py  health.py  relay.py
perf/: README.md  REPORT.md  REPORT_WI-webhook-relay-latency-0001.md  docker-compose.perf.yml
perf/grafana/dashboards/: webhook-relay-perf.json
perf/grafana/provisioning/dashboards/: dashboards.yml
perf/grafana/provisioning/datasources/: datasources.yml
perf/k6/scenarios/: baseline.js  flaky_receivers.js  large_payload.js  sanity.js  slow_receivers.js  soak.js  spike.js
perf/prometheus/: prometheus.yml
perf/receivers/: Dockerfile  receiver_server.py
perf/scripts/: run-k6.ps1
tests/: test_api.py
